fixed ui footer responsive with additional popover for shared links on mobile view

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -80,12 +80,6 @@
     bottom: 0;
   }
 
-  @media (min-width: 62em) and (orientation: portrait) {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-  }
-
   @media (min-width: 75em) {
     display: none;
   }
